[package]
name = "kenshi-trade-map"
version = "5.0.0"
edition = "2021"
authors = ["Kenshi Trade Map Team"]
description = "Interactive trade route map for Kenshi game"

[dependencies]
eframe = "0.27"
egui = "0.27"
image = { version = "0.25", features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
